[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomcat"
version = "0.1.0"
description = "Tomography Catalogue Tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "TomCat Developers"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "flask>=2.0.0",
    "typer>=0.7.0",
    "pandas>=1.0.0",
    "numpy>=1.20.0",
    "mrcfile>=1.3.0",
    "pillow>=8.0.0",
    "imageio>=2.9.0",
    "werkzeug>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]

[project.scripts]
tomcat = "tomcat.app:cli"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["tomcat"]

[tool.setuptools.package-data]
tomcat = ["static/**/*", "templates/**/*"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
exclude = ["venv", ".venv", ".git", "__pycache__", "build", "dist"]